mix_compile.log
Compiling 3 files (.ex)
Compiling crate zenohex_nif in release mode (native/zenohex_nif)
   Compiling zenohex_nif v0.3.2 (/Users/takasehideki/research/zenoh/zenohex/native/zenohex_nif)
error[E0277]: the trait bound `ZBytes: From<i64>` is not satisfied
  --> src/sample.rs:38:17
   |
38 |                 zenoh::bytes::ZBytes::from(sample.value.decode::<i64>().unwrap())
   |                 ^^^^^^^^^^^^^^^^^^^^ the trait `From<i64>` is not implemented for `ZBytes`
   |
   = help: the following other types implement trait `From<T>`:
             `ZBytes` implements `From<&Cow<'_, [u8]>>`
             `ZBytes` implements `From<&Cow<'_, str>>`
             `ZBytes` implements `From<&String>`
             `ZBytes` implements `From<&Vec<u8>>`
             `ZBytes` implements `From<&[u8; N]>`
             `ZBytes` implements `From<&[u8]>`
             `ZBytes` implements `From<&str>`
             `ZBytes` implements `From<AttachmentType<ID>>`
           and 8 others

error[E0277]: the trait bound `ZBytes: From<f64>` is not satisfied
  --> src/sample.rs:41:17
   |
41 |                 zenoh::bytes::ZBytes::from(sample.value.decode::<f64>().unwrap())
   |                 ^^^^^^^^^^^^^^^^^^^^ the trait `From<f64>` is not implemented for `ZBytes`
   |
   = help: the following other types implement trait `From<T>`:
             `ZBytes` implements `From<&Cow<'_, [u8]>>`
             `ZBytes` implements `From<&Cow<'_, str>>`
             `ZBytes` implements `From<&String>`
             `ZBytes` implements `From<&Vec<u8>>`
             `ZBytes` implements `From<&[u8; N]>`
             `ZBytes` implements `From<&[u8]>`
             `ZBytes` implements `From<&str>`
             `ZBytes` implements `From<AttachmentType<ID>>`
           and 8 others

error[E0599]: no function or associated item named `new` found for struct `Sample` in the current scope
  --> src/sample.rs:49:32
   |
49 |         zenoh::sample::Sample::new(key_expr, value)
   |                                ^^^ function or associated item not found in `Sample`

error[E0308]: mismatched types
  --> src/session.rs:33:68
   |
33 |         Ok(subscriber) => Ok(ResourceArc::new(crate::SubscriberRef(subscriber))),
   |                                               -------------------- ^^^^^^^^^^ expected `Subscriber<Receiver<Sample>>`, found `Subscriber<FifoChannelHandler<...>>`
   |                                               |
   |                                               arguments to this struct are incorrect
   |
   = note: expected struct `Subscriber<flume::Receiver<Sample>>`
              found struct `Subscriber<FifoChannelHandler<Sample>>`
note: tuple struct defined here
  --> src/lib.rs:29:8
   |
29 | struct SubscriberRef(Subscriber<Receiver<Sample>>);
   |        ^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/session.rs:50:66
   |
50 |         Ok(queryable) => Ok(ResourceArc::new(crate::QueryableRef(queryable))),
   |                                              ------------------- ^^^^^^^^^ expected `Queryable<Receiver<Query>>`, found `Queryable<FifoChannelHandler<...>>`
   |                                              |
   |                                              arguments to this struct are incorrect
   |
   = note: expected struct `Queryable<flume::Receiver<zenoh::query::Query>>`
              found struct `Queryable<FifoChannelHandler<zenoh::query::Query>>`
note: tuple struct defined here
  --> src/lib.rs:30:8
   |
30 | struct QueryableRef(Queryable<Receiver<Query>>);
   |        ^^^^^^^^^^^^

error[E0277]: the trait bound `ZBytes: From<i64>` is not satisfied
  --> src/session.rs:62:47
   |
62 |     session_put_impl(env, resource, key_expr, value)
   |     ----------------                          ^^^^^ the trait `From<i64>` is not implemented for `ZBytes`, which is required by `i64: Into<ZBytes>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             `ZBytes` implements `From<&Cow<'_, [u8]>>`
             `ZBytes` implements `From<&Cow<'_, str>>`
             `ZBytes` implements `From<&String>`
             `ZBytes` implements `From<&Vec<u8>>`
             `ZBytes` implements `From<&[u8; N]>`
             `ZBytes` implements `From<&[u8]>`
             `ZBytes` implements `From<&str>`
             `ZBytes` implements `From<AttachmentType<ID>>`
           and 8 others
   = note: required for `i64` to implement `Into<ZBytes>`
note: required by a bound in `session_put_impl`
  --> src/session.rs:85:24
   |
85 | fn session_put_impl<T: Into<zenoh::bytes::ZBytes>>(
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `session_put_impl`

error[E0277]: the trait bound `ZBytes: From<f64>` is not satisfied
  --> src/session.rs:72:47
   |
72 |     session_put_impl(env, resource, key_expr, value)
   |     ----------------                          ^^^^^ the trait `From<f64>` is not implemented for `ZBytes`, which is required by `f64: Into<ZBytes>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             `ZBytes` implements `From<&Cow<'_, [u8]>>`
             `ZBytes` implements `From<&Cow<'_, str>>`
             `ZBytes` implements `From<&String>`
             `ZBytes` implements `From<&Vec<u8>>`
             `ZBytes` implements `From<&[u8; N]>`
             `ZBytes` implements `From<&[u8]>`
             `ZBytes` implements `From<&str>`
             `ZBytes` implements `From<AttachmentType<ID>>`
           and 8 others
   = note: required for `f64` to implement `Into<ZBytes>`
note: required by a bound in `session_put_impl`
  --> src/session.rs:85:24
   |
85 | fn session_put_impl<T: Into<zenoh::bytes::ZBytes>>(
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `session_put_impl`

error[E0433]: failed to resolve: use of undeclared type `Value`
  --> src/session.rs:82:47
   |
82 |     session_put_impl(env, resource, key_expr, Value::from(value.as_slice()))
   |                                               ^^^^^ use of undeclared type `Value`

error[E0308]: mismatched types
   --> src/session.rs:114:69
    |
114 |         Ok(receiver) => Ok(ResourceArc::new(crate::ReplyReceiverRef(receiver))),
    |                                             ----------------------- ^^^^^^^^ expected `Receiver<Reply>`, found `FifoChannelHandler<Reply>`
    |                                             |
    |                                             arguments to this struct are incorrect
    |
    = note: expected struct `flume::Receiver<zenoh::query::Reply>`
               found struct `FifoChannelHandler<zenoh::query::Reply>`
note: tuple struct defined here
   --> src/lib.rs:31:8
    |
31  | struct ReplyReceiverRef(Receiver<Reply>);
    |        ^^^^^^^^^^^^^^^^

error[E0609]: no field `sample` on type `zenoh::query::Reply`
   --> src/session.rs:127:34
    |
127 |         Ok(reply) => match reply.sample {
    |                                  ^^^^^^ unknown field

error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
   --> src/subscriber.rs:13:22
    |
13  |     let subscriber: &Subscriber<'_, Receiver<Sample>> = &resource.0;
    |                      ^^^^^^^^^^ -- help: remove the lifetime argument
    |                      |
    |                      expected 0 lifetime arguments
    |
note: struct defined here, with 0 lifetime parameters
   --> /Users/takasehideki/.cargo/registry/src/index.crates.io-6f17d22bba15001f/zenoh-1.0.0/src/api/subscriber.rs:142:12
    |
142 | pub struct Subscriber<Handler> {
    |            ^^^^^^^^^^

error[E0599]: no method named `encoding` found for reference `&ZBytes` in the current scope
  --> src/value.rs:12:21
   |
12 |         match value.encoding() {
   |                     ^^^^^^^^ method not found in `&ZBytes`

error[E0599]: no method named `into_arc` found for struct `Session` in the current scope
  --> src/lib.rs:47:63
   |
47 |         Ok(session) => Ok(ResourceArc::new(SessionRef(session.into_arc()))),
   |                                                               ^^^^^^^^
   |
help: there is a method `into` with a similar name
   |
47 |         Ok(session) => Ok(ResourceArc::new(SessionRef(session.into()))),
   |                                                               ~~~~

error[E0507]: cannot move out of a shared reference
  --> src/query.rs:58:42
   |
58 |     match query.reply(sample.key_expr(), *sample.payload()).wait() {
   |                                          ^^^^^^^^^^^^^^^^^ move occurs because value has type `ZBytes`, which does not implement the `Copy` trait

Some errors have detailed explanations: E0107, E0277, E0308, E0433, E0507, E0599, E0609.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `zenohex_nif` (lib) due to 14 previous errors

== Compilation error in file lib/zenohex/nif.ex ==
** (RuntimeError) Rust NIF compile error (rustc exit code 101)
    (rustler 0.34.0) lib/rustler/compiler.ex:36: Rustler.Compiler.compile_crate/3
    lib/zenohex/nif.ex:8: (module)
